# ueye-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  ueye-wrapper-config.cmake
dev/: dev.cpp
example/: CMakeLists.txt  trigger.cpp
examples/: CMakeLists.txt  examples-CMakeLists.txt  ueye_multi.cpp  ueye_multiple.cpp  ueye_single.cpp
include/: ip_helpers.h  ueye_capture_handle.h  ueye_handle.h  ueye_wrapper.h  wrapper_helpers.h  wrapper_types.h
src/: ueye_capture_handle.cpp  ueye_handle.cpp  ueye_wrapper.cpp
tools/: CMakeLists.txt  ueye_ip_settings.cpp
ueye-sdk-cmake/: CMakeLists.txt  FindUEYE-SDK.cmake
wrapper/: CMakeLists.txt  ueye-wrapper-config.cmake
wrapper/cmake/: FindUEye.cmake
wrapper/include/: ip_helpers.h  types.h  ueye_handle.h  ueye_wrapper.h
wrapper/src/: ueye_wrapper.cpp
